feat(i18n): add unified translation layer
Provide a single source of truth for localized strings and helpers
for both frontend and backend. Introduces a core language module and
language catalogs (en/ru/uk/shared), lightweight LangString wrappers
for client and server, and TypeScript types for language usage.

The backend wrapper includes OS locale detection (including PowerShell
lookup on Windows) so server-side string selection respects the user
environment. Also add a tsconfig path alias (_lang/*) to simplify imports.

This centralizes translation handling and streamlines multilingual
maintenance across the codebase.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "paths": {
       "_/*": ["src/*"],
       "_shared/*": ["src/shared/*"],
+      "_lang/*": ["src/lang/*"],
       "_backend/*": ["src/backend/*"],
       "_workers/*": ["src/backend/workers/*"],
       "_frontend/*": ["src/frontend/*"],
