--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.0.0",
     "dotenv-webpack": "^8.1.1",
+    "electron": "^38.1.2",
     "electron-builder": "^26.0.12",
     "esbuild-loader": "^4.3.0",
     "eslint": "^9.36.0",
@@ -79,12 +80,12 @@
     "eslint-plugin-unused-imports": "^4.2.0",
     "html-webpack-plugin": "^5.6.4",
     "jest": "^30.1.3",
+    "ts-jest": "^29.4.4",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript-eslint": "^8.44.0",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
-    "webpack-merge": "^6.0.1",
-    "electron": "^38.1.2"
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
     "css-loader": "^7.1.2",
