--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@overwolf/ow-electron-packages-types": "^0.0.16",
     "@swc/core": "^1.13.5",
     "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/md5": "^2.3.5",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
@@ -91,6 +92,7 @@
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "less-loader": "^12.3.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "style-loader": "^4.0.0"
